--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ ul li {
     justify-content: space-around;
     align-items: center;
     gap: 48px;
+    cursor: pointer;
 }
 
 
@@ -136,12 +137,15 @@ ul li h1 {
     cursor: pointer;
 }
 
+.number-selected {
+    background-color: #000;
+}
+
 .cartContent {
     width: 317px;
-    height: 484px;
+    height: 90%;
     display: flex;
     flex-direction: column;
-    padding: 25px;
     background-color: #fff;
     border-radius: 10px;
     border: 2px solid #E2E2E2;
@@ -150,6 +154,7 @@ ul li h1 {
 .cartContent h3 {
     font-size: 24px;
     font-style: italic;
+    padding: 15px;
 }
 
 .funcButtons {
@@ -188,7 +193,7 @@ ul li h1 {
     height: 52px;
 }
 
-.cartBtn {
+.addCart {
     width: 209px;
     height: 52px;
     background-color: #27C383;
@@ -197,6 +202,19 @@ ul li h1 {
     border-radius: 10px;
     font-size: 16px;
     cursor: pointer;
+}
+
+.saveCart {
+    width: 100%;
+    height: 96px;
+    font-size: 35px;
+    font-style: italic;
+    color: #27C383;
+    border: none;
+}
+
+.btnArea {
+    border-top: 1px solid #E2E2E2;
 }
 
 hr {
