--- a/styles.css
+++ b/styles.css
@@ -142,7 +142,7 @@ ul li h1 {
 }
 
 .cartContent {
-    width: 317px;
+    width: 450px;
     height: 90%;
     display: flex;
     flex-direction: column;
@@ -154,7 +154,49 @@ ul li h1 {
 .cartContent h3 {
     font-size: 24px;
     font-style: italic;
+    padding: 15px 0;
+}
+
+.padding {
     padding: 15px;
+}
+
+.cartAreaItem {
+    display: flex;
+    padding: 15px 0;
+}
+
+.cartAreaItem img {
+    width: 10%;
+    height: 50%;
+    cursor: pointer;
+    align-self: center;
+}
+
+.coloredBar {
+    width: 4px;
+    height: 86px;
+    border-radius: 100px 0px 0px 100px;
+    margin: 0 10px;
+}
+
+.betCard {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+}
+
+.numbersBet {
+    font-size: 15px;
+    font-weight: bold;
+    font-style: italic;
+}
+
+.nameAndPrice {
+    display: flex;
+    font-size: 16px;
+    gap: 10px;
 }
 
 .funcButtons {
@@ -194,6 +236,9 @@ ul li h1 {
 }
 
 .addCart {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 209px;
     height: 52px;
     background-color: #27C383;
@@ -202,7 +247,15 @@ ul li h1 {
     border-radius: 10px;
     font-size: 16px;
     cursor: pointer;
+    gap: 30px;
 }
+
+.addCart img {
+    fill: #fff;
+    width: 10%;
+    height: 50%;
+}
+
 
 .saveCart {
     width: 100%;
@@ -219,6 +272,7 @@ ul li h1 {
 
 hr {
     border-top: 2px solid #EBEBEB;
+    margin-top: 40px;
 }
 
 .footer {
