--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,21 @@ ul li h1, ul li h4 {
     cursor: pointer;
 }
 
+ul li h4 img {
+    width: 5%;
+    height: 5%;
+}
+
+.underline {
+    position: absolute;
+    top: 65px;
+    left: 147px;
+    width: 95px;
+    height: 7px;
+    background-color: #B5C401;
+    border-radius: 6px;
+}
+
 .mainContent {
     display: flex;
     padding: 0 150px;
@@ -89,6 +104,7 @@ ul li h1, ul li h4 {
 .Quina:active, .Quina:hover {
     color: #fff;
     background-color: #F79C31;
+    transition-duration: 0.4s;
 }
 
 .Lotofácil {
@@ -100,6 +116,7 @@ ul li h1, ul li h4 {
 .Lotofácil:active, .Lotofácil:hover {
     color: #fff;
     background-color: #7F3992;
+    transition-duration: 0.4s;
 }
 
 .Mega-Sena {
@@ -111,6 +128,7 @@ ul li h1, ul li h4 {
 .Mega-Sena:active, .Mega-Sena:hover {
     color: #fff;
     background-color: #01AC66;
+    transition-duration: 0.4s;
 }
 
 .buttonsArea {
@@ -138,6 +156,11 @@ ul li h1, ul li h4 {
     border: none;
     border-radius: 100px;
     cursor: pointer;
+}
+
+.number:hover {
+    background-color: #777;
+    transition-duration: 0.4s;
 }
 
 .number-selected {
@@ -226,6 +249,7 @@ ul li h1, ul li h4 {
 .gameButton1:hover, .gameButton2:hover {
     background-color: #27C383;
     color: #Fff;
+    transition-duration: 0.4s;
 }
 
 .gameButton1 {
@@ -253,10 +277,15 @@ ul li h1, ul li h4 {
     gap: 30px;
 }
 
+.addCart:hover {
+    background-color: #fff;
+    color: #27C383;
+    transition-duration: 0.4s;
+}
+
+
 .addCart img {
-    fill: #fff;
-    width: 10%;
-    height: 50%;
+    color: #fff;
 }
 
 
@@ -268,6 +297,12 @@ ul li h1, ul li h4 {
     color: #27C383;
     border: none;
     cursor: pointer;
+}
+
+.saveCart:hover {
+    background-color: #27C383;
+    color: #fff;
+    transition-duration: .4s;
 }
 
 .btnArea {
