--- a/styles.css
+++ b/styles.css
@@ -85,14 +85,27 @@ ul li h4 img {
     font-size: 17px;
 }
 
-.Quina, .Mega-Sena, .Lotofácil {
+.Quina, .Mega-Sena, .Lotofácil, .Teste {
     width: 113px;
     height: 34px;
     border-radius: 100px;
+    margin-top: 20px;
     margin-right: 15px;
     font-style: italic;
     font-weight: bold;
     cursor: pointer;
+}
+
+.Teste {
+    color: #FF0000;
+    border: 2px solid #FF0000;
+    background-color: #fff;
+}
+
+.Teste:active, .Teste:hover {
+    color: #fff;
+    background-color: #FF0000;
+    transition-duration: 0.4s;
 }
 
 .Quina {
